Fixed mobile alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
 }
